Attemps to fix mobile overflow carousel

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,7 @@ body, html{
 }
 body{
   overflow: hidden;
+  position: fixed;
 }
 body.needsScroll{
   overflow-Y: auto;
